--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="AutoMapper" version="4.0.0-alpha1" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.0.1" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.0.1" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.0.1" targetFramework="net45" />
   <package id="ServiceStack" version="4.0.40" targetFramework="net45" />
   <package id="ServiceStack.Client" version="4.0.40" targetFramework="net45" />
   <package id="ServiceStack.Common" version="4.0.40" targetFramework="net45" />
