--- a/App.config
+++ b/App.config
@@ -4,8 +4,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <!-- <add key="mongoHost" value="newyork-1226.com"/> -->
-    <add key="mongoHost" value="localhost"/>
+    <add key="mongoHost" value="newyork-1226.com"/> 
+    <!-- <add key="mongoHost" value="localhost"/> -->
     <add key="db" value="mmb"/>
     <add key="port" value="27017"/>
     <add key="movie_collection" value="yts_movies"/>
@@ -14,20 +14,22 @@
     <add key="show_collection" value="eztv_shows"/>
     <add key="myshows_collection" value="my_shows"/>
     <add key="downloaded_collection" value="downloaded"/>
-    <add key="torrent_download_path" value="G:\Downloads"/>
-    <add key="file_download_path" value="G:\Downloads"/>
-    <add key="show_move_path" value="G:\Videos\Shows"/>
-    <add key="movie_move_path" value="G:\Videos\Movies"/>
+    <add key="torrent_download_path" value="Z:\Downloads"/>
+    <add key="file_download_path" value="Z:\Downloads"/>
+    <add key="show_move_path" value="Z:\Videos\Shows"/>
+    <add key="movie_move_path" value="Z:\Videos\Movies"/>
     <add key="log_file" value="D:\ShowBot\log.txt"/>
     <add key="verbose_logging" value="false"/>
     <add key="user-agent" value="Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36"/>
     <add key="yts_root" value="https://yts.ag/"/>
     <add key="yts_suffix" value="api/v2/list_movies.json?limit=50&amp;page="/>
+    <add key="yts_quality_pref" value="1080p"/>
+    <add key="yts_quality_excl" value="3D"/>
     <add key="imdb_root" value="http://www.imdb.com/search/title?at=0&amp;count=250&amp;release_date=sYYYY,fYYYY&amp;sort=year,asc&amp;start=1&amp;title_type=feature,tv_movie,documentary&amp;view=simple"/>
-    <add key="torrent_download_path" value="G:\Downloads"/>
-    <add key="temp_torrent_download_path" value="G:\Downloads\temp"/>
+    <add key="torrent_download_path" value="Z:\Downloads"/>
+    <add key="temp_torrent_download_path" value="Z:\Downloads\temp"/>
     <add key="deluge_torrent_path" value="C:\Users\master\AppData\Roaming\deluge\state"/>
-    <add key="file_download_path" value="G:\Downloads"/>
+    <add key="file_download_path" value="Z:\Downloads"/>
     <add key="show_url" value="https://eztv.ag"/>
     <add key="show_url_list_postfix" value="/showlist/"/>
     <add key="show_excl" value="MV Group Documentaries"/>
