--- a/App.config
+++ b/App.config
@@ -4,7 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="mongoHost" value="newyork-1226.com"/> 
+    <add key="mongoHost" value="192.168.1.107"/> 
     <!-- <add key="mongoHost" value="localhost"/> -->
     <add key="db" value="mmb"/>
     <add key="port" value="27017"/>
@@ -18,7 +18,7 @@
     <add key="file_download_path" value="Z:\Downloads"/>
     <add key="show_move_path" value="Z:\Videos\Shows"/>
     <add key="movie_move_path" value="Z:\Videos\Movies"/>
-    <add key="log_file" value="D:\ShowBot\log.txt"/>
+    <add key="log_file" value="Z:\Remote\Projects\mmb\mmb\log.txt"/>
     <add key="verbose_logging" value="false"/>
     <add key="user-agent" value="Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36"/>
     <add key="yts_root" value="https://yts.ag/"/>
@@ -35,7 +35,7 @@
     <add key="show_excl" value="MV Group Documentaries"/>
     <add key="show_innerhtml_excl" value="&lt;,Home,TV-News,Countdown List,Calendar,Show List,Forum,RSS,FAQ,Login,1EZTVaGQ6UsjYJ9fwqGnd45oZ6HGT7WKZd,Status,Rating,1EZTVtpeNttqdDayh3D98nfQYybeZhu5YV,tvnews,bitcoin,17KCHWB1QVaK6wL2CMf73TjYquTT2ZW9pw"/>
     <add key="episode_innerhtml_excl" value="&lt;,Home,TV-News,Countdown List,Calendar,Show List,Forum,RSS,FAQ,Login,1EZTVaGQ6UsjYJ9fwqGnd45oZ6HGT7WKZd,Status,Rating,1EZTVtpeNttqdDayh3D98nfQYybeZhu5YV,tvnews,Login to vote,yout,bitcoin,17KCHWB1QVaK6wL2CMf73TjYquTT2ZW9pw"/>
-    <add key="download_excl" value="bay"/>
+    <add key="download_excl" value="torrage"/>
     <add key="download_perf" value="torrenth,zoink"/>
     <add key="imdb_search_excl" value="short,video game,TV series,video"/>
     <add key="torrent_filename_marker" value="name"/>
